--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="./assets/img/favicon.png" rel="icon">
+  <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -330,7 +330,7 @@
               <p>
                 Banasthali Vidyapith <br>
                 Jaipur, Rajasthan<br><br>
-                <strong>Phone:</strong> +91 856 780 5002<br>
+                <strong>Phone:</strong> +91 **********<br>
                 <strong>Email:</strong> info@rentit.com<br>
               </p>
               <div class="social-links mt-3">
@@ -387,7 +387,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/dewi-free-multi-purpose-html-template/ -->
-        Designed by <a href="https://parulportfolio.netlify.app">Parul Chaddha</a>
+        Designed by <a href="https://parulportfolio.netlify.app">Ina Sharma</a>
       </div>
     </div>
   </footer><!-- End Footer -->
